use FSDataBufferedInputStream